// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyPortalToastContainer matches snapshot 1`] = `
<body>
  <main
    id="root"
  />
  <div
    class="sc-dkzDqf cDpjbc"
    data-portal-slot="toast"
  >
    <div
      class="sc-bczRLJ fJVrkw"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ jNmpQW"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ TZlHg"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`BodyPortalToastContainer uses inline prop 1`] = `
<body>
  <main
    id="root"
  />
  <div
    class="sc-dkzDqf iRjmjx"
    data-portal-slot="toast"
  >
    <div
      class="sc-bczRLJ fbYbHx"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ fLHZqT"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ eOKLQh"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ToastContainer matches snapshot 1`] = `
<body>
  <div>
    <div
      aria-live="polite"
      class="sc-gsnTZi cA-dmZH"
    >
      <div
        class="sc-bczRLJ fJVrkw"
      >
        <div
          class="neutral"
        >
          <div
            class="title"
          >
            Neutral
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="sc-bczRLJ jNmpQW"
      >
        <div
          class="failure"
        >
          <div
            class="title"
          >
            Error
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="sc-bczRLJ TZlHg"
      >
        <div
          class="success"
        >
          <div
            class="title"
          >
            Success
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ToastContainer uses inline prop 1`] = `
<body>
  <div>
    <div
      aria-live="polite"
      class="sc-gsnTZi ejWjjm"
    >
      <div
        class="sc-bczRLJ fbYbHx"
      >
        <div
          class="neutral"
        >
          <div
            class="title"
          >
            Neutral
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="sc-bczRLJ fLHZqT"
      >
        <div
          class="failure"
        >
          <div
            class="title"
          >
            Error
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="sc-bczRLJ eOKLQh"
      >
        <div
          class="success"
        >
          <div
            class="title"
          >
            Success
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
